--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto+Slab&display=swap');
+
 // http://meyerweb.com/eric/tools/css/reset/
 //  v2.0 | 20110126
 //  License: none (public domain)
@@ -19,7 +21,7 @@ time, mark, audio, video {
   padding: 0;
   border: 0;
   font-size: 16px;
-  font: inherit;
+  font-family: 'Roboto Slab', serif;
   vertical-align: baseline;
   box-sizing: border-box;
 }
