--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,9 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Roboto+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap');
 
 // http://meyerweb.com/eric/tools/css/reset/
 //  v2.0 | 20110126
 //  License: none (public domain)
 
+html {
+  scroll-behavior: smooth;
+}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
