--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -35,6 +35,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
   line-height: 1;
+  padding-bottom: 90px;
 }
 ol, ul {
   list-style: none;
